Align left hand cards with top of text, use charted colour and fix spacing

--- a/common/app/assets/stylesheets/module/experiments/_ab-inline-link-card.scss
+++ b/common/app/assets/stylesheets/module/experiments/_ab-inline-link-card.scss
@@ -46,7 +46,7 @@
     width: 100%;
     margin-bottom: 0;
 
-    .furniture--left & {
+    .card--left & {
         min-height: 84px;
     }
 }
@@ -134,6 +134,7 @@
 }
 
 .card--left {
+    padding-top: 6px; // Align block with top of the text
 
     .card__headline {
         font-size: 16px !important;
@@ -142,7 +143,6 @@
         line-height: 2.0rem !important;
     }
 }
-
 
 .card--right {
     margin-top: $baseline*4;
